# Timestamp_msi

./: .gitignore  README.md
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/routes/: __init__.py  cohort.py  data_batches.py  experiments.py  integrations.py  monte_carlo.py  vm.py
apps/api/app/approach_2/: main.py
apps/api/app/approach_2/api/: experiments.py  pipeline.py  slides.py  webhook.py
apps/api/app/approach_2/database/: models.py  setup.py  supabase_client.py
apps/api/app/approach_2/pipelines/: feature_extractor.py  inference.py  mil_trainer.py  project_setup.py
apps/api/app/approach_2/schemas/: schemas.py
apps/api/app/core/: config.py
apps/api/app/models/: cohort.py  data_batches.py  experiments.py  integrations.py  monte_carlo.py  vm.py
apps/api/app/services/: __init__.py  cohort.py  data_batches.py  experiments.py  monte_carlo.py  vm.py
apps/api/tests/: test_cohort.py  test_experiments.py  test_integrations_and_batches.py
apps/web/: README.md  package-lock.json  package.json
apps/web/public/assets/: ATTRIBUTION.md  snow-in-jinan.webm
apps/web/src/app/: globals.css  layout.tsx  (+1 more)
automation/: README.md
automation/n8n/: docker-compose.yml  start-local.ps1  timestamp-msi-connection-check.json  timestamp-msi-gdc-10-svs-batch.json  timestamp-msi-integrations-check.json  timestamp-msi-live-source-check.json  timestamp-msi-modular-training.json  timestamp-msi-monte-carlo-pipeline.json
configs/: experiment_grid.example.json  monte_carlo_search.example.json
(+4 files in other folders)
